--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "private": true,
   "dependencies": {
     "@react-google-maps/api": "^2.17.1",
+    "@stripe/stripe-js": "^1.54.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "^2.1.3",
     "react-slick": "^0.29.0",
+    "react-stripe-checkout": "^2.6.3",
     "slick-carousel": "^1.8.1",
+    "stripe": "^12.9.0",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.19"
   },
